--- a/index.html
+++ b/index.html
@@ -1,85 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  Features
-  Pricing
-  Resources
+    <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="headerInner">
+          <div class="headerCol">
+            <div>
+              <a href="" class="logoLink flexBtn">
+                <img src="./assets/images/logo.svg" alt="" class="headerLogo">
+              </a>
+            </div>
+            <nav class="headerNavigation">
+              <ul>
+                <li><a href="#" class="headerLinkNavigation">Features</a></li>
+                <li><a href="#" class="headerLinkNavigation">Pricing</a></li>
+                <li><a href="#" class="headerLinkNavigation">Resources</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="headerCol"></div>
+        </div>
+      </div>
+    </header>
+    Features Pricing Resources Login Sign Up More than just shorter links Build
+    your brand’s recognition and get detailed insights on how your links are
+    performing. Get Started Shorten a link here... Shorten It! Advanced
+    Statistics Track how your links are performing across the web with our
+    advanced statistics dashboard. Brand Recognition Boost your brand
+    recognition with each click. Generic links don’t mean a thing. Branded links
+    help instil confidence in your content. Detailed Records Gain insights into
+    who is clicking your links. Knowing when and where people engage with your
+    content helps inform better decisions. Fully Customizable Improve brand
+    awareness and content discoverability through customizable links,
+    supercharging audience engagement. Boost your links today Get Started
+    Features Link Shortening Branded Links Analytics Resources Blog Developers
+    Support Company About Our Team Careers Contact
 
-  Login
-  Sign Up
-
-  More than just shorter links
-
-  Build your brand’s recognition and get detailed insights 
-  on how your links are performing.
-
-  Get Started
-  
-  Shorten a link here...
-
-  Shorten It!
-
-  Advanced Statistics
-
-  Track how your links are performing across the web with our 
-  advanced statistics dashboard.
-
-  Brand Recognition
-
-  Boost your brand recognition with each click. Generic links don’t 
-  mean a thing. Branded links help instil confidence in your content.
-
-  Detailed Records
-
-  Gain insights into who is clicking your links. Knowing when and where 
-  people engage with your content helps inform better decisions.
-
-  Fully Customizable
-
-  Improve brand awareness and content discoverability through customizable 
-  links, supercharging audience engagement.
-
-  Boost your links today
-
-  Get Started
-
-  Features
-
-  Link Shortening
-  Branded Links
-  Analytics
-
-  Resources
-
-  Blog
-  Developers
-  Support
-
-  Company
-
-  About
-  Our Team
-  Careers
-  Contact
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </body>
 </html>
