--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
+    <title>Shorty | URL shortening API</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -38,7 +38,7 @@
           <div class="headerCol">
             <div>
               <a href="" class="logoLink flexBtn">
-                <img src="./assets/images/logo.svg" alt="" class="headerLogo">
+                <img src="./assets/images/logo.svg" alt="" class="headerLogo" />
               </a>
             </div>
             <nav class="headerNavigation">
@@ -56,19 +56,40 @@
         </div>
       </div>
     </header>
-    Features Pricing Resources Login Sign Up More than just shorter links Build
-    your brand’s recognition and get detailed insights on how your links are
-    performing. Get Started Shorten a link here... Shorten It! Advanced
-    Statistics Track how your links are performing across the web with our
-    advanced statistics dashboard. Brand Recognition Boost your brand
-    recognition with each click. Generic links don’t mean a thing. Branded links
-    help instil confidence in your content. Detailed Records Gain insights into
-    who is clicking your links. Knowing when and where people engage with your
-    content helps inform better decisions. Fully Customizable Improve brand
-    awareness and content discoverability through customizable links,
-    supercharging audience engagement. Boost your links today Get Started
-    Features Link Shortening Branded Links Analytics Resources Blog Developers
-    Support Company About Our Team Careers Contact
+    <main>
+      <section id="moreThanJustShortLinksSection">
+        <div class="container">
+          <div class="moreThanJustShortLinksSectionInner">
+            <div class="moreThanJustShortLinksInnerCol">
+              <h1>More than just shorter links</h1>
+              <h2 class="grayishVioletText">
+                Build your brand’s recognition and get detailed insights on how
+                your links are performing.
+              </h2>
+              <a href="#" class="cyanBtn roundedBtn">Get Started</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="shortLinkGeneratorSection">
+        <div class="container">
+          <form action="" class="shortLinkGenerator">
+            <input type="text" name="link" id="shortLinkInput" />
+          </form>
+        </div>
+      </section>
+    </main>
+    Get Started Shorten a link here... Shorten It! Advanced Statistics Track how
+    your links are performing across the web with our advanced statistics
+    dashboard. Brand Recognition Boost your brand recognition with each click.
+    Generic links don’t mean a thing. Branded links help instil confidence in
+    your content. Detailed Records Gain insights into who is clicking your
+    links. Knowing when and where people engage with your content helps inform
+    better decisions. Fully Customizable Improve brand awareness and content
+    discoverability through customizable links, supercharging audience
+    engagement. Boost your links today Get Started Features Link Shortening
+    Branded Links Analytics Resources Blog Developers Support Company About Our
+    Team Careers Contact
 
     <div class="attribution">
       Challenge by
