--- a/index.html
+++ b/index.html
@@ -83,18 +83,39 @@
           <div class="shortenedLinks"></div>
         </div>
       </section>
+      <section id="advantagedStatisticsSection">
+        <div class="container">
+          <h2>Advanced Statistics</h2>
+          <h3 class="sectionSubtitle">
+            Track how your links are performing across the web with our advanced
+            statistics dashboard.
+          </h3>
+          <div class="advantagedStatisticsColumns">
+            <div class="advantagedStatisticsColumn">
+              <span class="advantagedStatisticsIcon">
+                <img src="assets/images/icon-brand-recognition.svg" alt="" />
+              </span>
+              <h3 class="advantagedStatisticColumnTitle">
+                Brand Recognition
+              </h3>
+              <p>
+                Boost your brand recognition with each click. Generic links
+                don’t mean a thing. Branded links help instil confidence in
+                your content.
+              </p>
+            </div>
+            <div class="advantagedStatisticsColumn"></div>
+            <div class="advantagedStatisticsColumn"></div>
+          </div>
+        </div>
+      </section>
     </main>
-    Get Started Shorten a link here... Shorten It! Advanced Statistics Track how
-    your links are performing across the web with our advanced statistics
-    dashboard. Brand Recognition Boost your brand recognition with each click.
-    Generic links don’t mean a thing. Branded links help instil confidence in
-    your content. Detailed Records Gain insights into who is clicking your
-    links. Knowing when and where people engage with your content helps inform
-    better decisions. Fully Customizable Improve brand awareness and content
-    discoverability through customizable links, supercharging audience
-    engagement. Boost your links today Get Started Features Link Shortening
-    Branded Links Analytics Resources Blog Developers Support Company About Our
-    Team Careers Contact
+    Detailed Records Gain insights into who is clicking your links. Knowing when
+    and where people engage with your content helps inform better decisions.
+    Fully Customizable Improve brand awareness and content discoverability
+    through customizable links, supercharging audience engagement. Boost your
+    links today Get Started Features Link Shortening Branded Links Analytics
+    Resources Blog Developers Support Company About Our Team Careers Contact
 
     <div class="attribution">
       Challenge by
