--- a/index.html
+++ b/index.html
@@ -95,27 +95,41 @@
               <span class="advantagedStatisticsIcon">
                 <img src="assets/images/icon-brand-recognition.svg" alt="" />
               </span>
-              <h3 class="advantagedStatisticColumnTitle">
-                Brand Recognition
-              </h3>
+              <h3 class="advantagedStatisticColumnTitle">Brand Recognition</h3>
               <p>
                 Boost your brand recognition with each click. Generic links
-                don’t mean a thing. Branded links help instil confidence in
-                your content.
+                don’t mean a thing. Branded links help instil confidence in your
+                content.
               </p>
             </div>
-            <div class="advantagedStatisticsColumn"></div>
-            <div class="advantagedStatisticsColumn"></div>
+            <div class="advantagedStatisticsColumn">
+              <span class="advantagedStatisticsIcon">
+                <img src="assets/images/icon-detailed-records.svg" alt="" />
+              </span>
+              <h3 class="advantagedStatisticColumnTitle">Detailed Records</h3>
+              <p>
+                Gain insights into who is clicking your links. Knowing when and
+                where people engage with your content helps inform better
+                decisions.
+              </p>
+            </div>
+            <div class="advantagedStatisticsColumn">
+              <span class="advantagedStatisticsIcon">
+                <img src="assets/images/icon-fully-customizable.svg" alt="" />
+              </span>
+              <h3 class="advantagedStatisticColumnTitle">Fully Customizable</h3>
+              <p>
+                Improve brand awareness and content discoverability through
+                customizable links, supercharging audience engagement.
+              </p>
+            </div>
           </div>
         </div>
       </section>
     </main>
-    Detailed Records Gain insights into who is clicking your links. Knowing when
-    and where people engage with your content helps inform better decisions.
-    Fully Customizable Improve brand awareness and content discoverability
-    through customizable links, supercharging audience engagement. Boost your
-    links today Get Started Features Link Shortening Branded Links Analytics
-    Resources Blog Developers Support Company About Our Team Careers Contact
+    Boost your links today Get Started Features Link Shortening Branded Links
+    Analytics Resources Blog Developers Support Company About Our Team Careers
+    Contact
 
     <div class="attribution">
       Challenge by
