--feat Boost your links section desktop is ready.

--- a/index.html
+++ b/index.html
@@ -126,6 +126,12 @@
           </div>
         </div>
       </section>
+      <section id="boostYourLinksSection">
+        <div class="container">
+          <h2>Boost your links today</h2>
+          <div><a href="#" class="cyanBtn roundedBtn">Get Started</a></div>
+        </div>
+      </section>
     </main>
     Boost your links today Get Started Features Link Shortening Branded Links
     Analytics Resources Blog Developers Support Company About Our Team Careers
