--fix Refactoring old components folders for section and putting components for smaller stuff.

--- a/index.html
+++ b/index.html
@@ -156,14 +156,48 @@
             <nav class="footerNavigation">
               <ul>
                 <li><a href="#">Link Shortening</a></li>
-                <li><a href="#">Link Shortening</a></li>
-                <li><a href="#">Link Shortening</a></li>
-
+                <li><a href="#">Branded Links</a></li>
+                <li><a href="#">Analytics</a></li>
               </ul>
             </nav>
           </div>
-          <div class="col"></div>
-          <div class="col"></div>
+          <div class="col">
+            <p class="footerTitle">Resources</p>
+            <nav class="footerNavigation">
+              <ul>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Developers</a></li>
+                <li><a href="#">Support</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="col">
+            <p class="footerTitle">Company</p>
+            <nav class="footerNavigation">
+              <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Our Team</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="col">
+            <nav class="horizontalSocialNetNav">
+              <a href="#" target="_blank">
+                <img src="./assets/images/icon-facebook.svg" alt="facebook logo" srcset="">
+              </a>
+              <a href="#" target="_blank">
+                <img src="./assets/images/icon-twitter.svg" alt="twitter logo" srcset="">
+              </a>
+              <a href="#" target="_blank">
+                <img src="./assets/images/icon-pinterest.svg" alt="pinterest logo">
+              </a>
+              <a href="#">
+                <img src="./assets/images/icon-instagram.svg" alt="instagram logo" srcset="">
+              </a>
+            </nav>
+          </div>
         </div>
       </div>
     </footer>
