--- a/index.html
+++ b/index.html
@@ -80,7 +80,17 @@
             </form>
             <p class="errorText"><i>Please add a link</i></p>
           </div>
-          <div class="shortenedLinks"></div>
+          <div class="shortenedLinksWrapper">
+            <ul>
+              <li class="shortenedLinkLi">
+                <span class="completeLink">qualquer coisa</span>
+                <span class="shortenedLinksInteraction">
+                  <a href="#" class="shortenedLinkAnchor">algum link aqui</a>
+                  <button class="copyShortenedLink cyanBtn lessRoundedBtn">Copy</button>
+                </span>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <section id="advantagedStatisticsSection">
@@ -226,7 +236,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://github.com/lucas-moont" target="_blank">Luks Monteiro</a>.
     </div>
   </body>
 </html>
