--- a/index.html
+++ b/index.html
@@ -251,5 +251,6 @@
       <a href="https://github.com/lucas-moont" target="_blank">Luks Monteiro</a
       >.
     </div>
+  <script src="./assets/scripts/bundle.js"></script>
   </body>
 </html>
