--feat Trying to get shortened links.

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
       <a href="https://github.com/lucas-moont" target="_blank">Luks Monteiro</a
       >.
     </div>
-  <script src="./assets/scripts/bundle.js"></script>
-  </body>
+  <script type="module" src="./assets/scripts/menu.js"></script>
+  <script type="module" src="./assets/scripts/short_links/get_shortened_link.js"></script>  
+</body>
 </html>
