--feat Adding error return for when api does not return a link.

--- a/index.html
+++ b/index.html
@@ -253,5 +253,6 @@
     </div>
   <script type="module" src="./assets/scripts/menu.js"></script>
   <script type="module" src="./assets/scripts/short_links/get_shortened_link.js"></script>  
+  <script type="module" src="./assets/scripts/short_links/create_short_link_wrapper.js"></script>
 </body>
 </html>
