--- a/index.html
+++ b/index.html
@@ -245,5 +245,6 @@
   <script type="module" src="./assets/scripts/menu.js"></script>
   <script type="module" src="./assets/scripts/short_links/get_shortened_link.js"></script>  
   <script type="module" src="./assets/scripts/short_links/create_short_link_html_structure.js"></script>
+  <script type="module" src="./assets/scripts/main.js"></script>
 </body>
 </html>
